<resources>
    <string name="app_name">Sound recorder</string>
    <string name="start_recording">Start\nrecording</string>
    <string name="enable_speech_to_text">Enable speech-to-text</string>
    <string name="recording">Recording</string>
    <string name="home">Home</string>
    <string name="playback">playback</string>
    <string name="recordArea">RECORD AREA</string>
    <string name="btnStartRecord">RECORD</string>
    <string name="btnStopRecord">STOP  \n RECORDING</string>
    <string name="PlayArea">PLAY AREA</string>
    <string name="btnPlay">PLAY</string>
    <string name="btnStop">STOP</string>
    <string name="playback_home_btn">Playback</string>
    <string name="recordingNameHint">Set a name for the recording</string>
    <string name="dialog_title_name">Name File</string>
    <string name="dialog_action_ok">OK</string>
    <string name="dialog_action_delete">Delete recording</string>
    <string name="rename">Rename</string>
    <string name="deleteRecordings">delete</string>
    <string name="Delete">Delete</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="delete_question_a">Delete this file?</string>
    <string name="dialog_action_cancel_yes">Cancel</string>
    <string name="reset">CANCEL</string>
</resources>
